syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Trend.gRPC.Protos.v1";

package news.v1;

service News {
	rpc GetAllNews(google.protobuf.Empty) returns (stream ArticleTypeItemReply);
	rpc GetLatestNews(google.protobuf.Empty) returns (stream ArticleItemReply);
	rpc GetLatestNewsForType(ArticleTypeRequest) returns (stream ArticleItemReply);
}

enum ArticleTypeEnum {
	ARTICLE_TYPE_ENUM_CRYPTO = 0;
	ARTICLE_TYPE_ENUM_STOCK = 1;
	ARTICLE_TYPE_ENUM_ETF = 2;
	ARTICLE_TYPE_ENUM_ECONOMY = 3;
}	

message Page {
	int32 page_num = 1;
	int32 take = 2;
}

message ArticleTypeRequest {
	ArticleTypeEnum type = 1;
}

message FetchLatestNewsPageRequest {
	Page page = 1;
}

message FetchArticleTypePageRequest {
	Page page = 1;
	ArticleTypeEnum type = 2;
}

message ArticleItemExtendedPageResponse {
	int64 count = 1;
	repeated ArticleTypeItemReply items = 2;
}

message ArticleTypeItemReply {
	string title = 1;
	string text = 2;
	string url = 3;
	string page_source = 4;
	string type_name = 5;
	string type_dd = 6;
}

message ArticleItemReply {
	string title = 1;
	string text = 2;
	string url = 3;
	string page_source = 4;
}
